--- a/WebRoot/publics/css/light.css
+++ b/WebRoot/publics/css/light.css
@@ -99,11 +99,11 @@ body {
 .right-menu {
 	position: absolute;
 	right: 10px;
+	top: 20px;
 	display: inline-block;
-	width: 35px;
+	width: 28px;
 	height: 26px;
 	line-height: 0;
-	margin: 20px 0;
 	text-align: center;
 	cursor: pointer;
 }
@@ -113,26 +113,52 @@ body {
 	border: 1px solid #fff;
 	margin-top: 5px;
 }
-/* echar 图表展示 */
-.echarts {
+.right-bar {
 	position: absolute;
 	top: 70px;
-	right: 10px;
+	right: 0px;
 	width: 350px;
 	height: 88%;
 	min-height: 500px;
-	padding: 0 5px;
-	background-color: rgba(255, 255, 255, 0.85);
+	padding: 0;
+	background-color: rgba(24, 68, 93, 0.5);
 }
+.right-bar .options {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 35px;
+	height: 100%;
+	color: #FFF;
+	background-color: #535353;
+	box-sizing: border-box;
+}
+.right-bar .options li {
+	display: inline-block;
+	width: 35px;
+	padding: 12px 0;
+	text-align: center;
+	transition: all .3s ease;
+	cursor: pointer;
+}
+#hotpoint-opt {
+	border-top: 1px solid #FFF;
+	border-bottom: 1px solid #FFF;
+}
+#echart-opt:hover, #hotpoint-opt:hover, .active-echart-opt {
+	background-color: rgb(80, 228, 161);
+}
+/* echar 图表展示 */
 .echarts .btn-groups {
 	padding: 0;
-	margin: 0 -5px;
+	margin: 0;
 	text-align: center;
 }
 .echarts .echart-btn {
 	list-style: none;
 	display: inline-block;
-	width: 33.3%;
+	width: 33.5%;
 	line-height: 1.5;
 	padding: 5px 0;
 	margin: 0 -3px;
@@ -143,10 +169,10 @@ body {
 	cursor: pointer;
 }
 .echarts .echart-btn:hover {
- background-color: rgba(220, 91, 42, 1)
+ background-color: rgb(131, 232, 186);
 }
 .echarts .btn-actived {
-	background-color: rgba(220, 91, 42, 1) !important;
+	background-color: rgb(131, 232, 186) !important;
 }
 .echart-box {
 	position: relative;
@@ -159,35 +185,71 @@ body {
 	margin-top: 10px;
 	overflow: hidden;
 }
-/* city-zone 嵌套与右侧浮动div内 */
-.city-zone {
-	position: absolute;
-	bottom: 0;
+.echart-data, .hotpoint {
+	top: 0;
+	left: 0;
+	width: 315px;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.85);
+}
+.hotpoint {
+	display: none;
+}
+.hotpoint .input-group {
+  	padding: 5px;
+  }
+.hotpoint input {
+	outline: 0;
+	border: 0;
+	padding: 5px;
+	margin: 6px 0;
+	text-align: left;
+	border-bottom: 1px solid #333;
+	background-color: #eef1f3;
+}
+input#longitude, input#latitude {
+	width: 35%;
+}
+input#latitude {
+	margin-left: 4px;	
+}
+#keyvalue {
 	width: 100%;
-	overflow: hidden;
+}	
+
+input#keyvalue:focus {
+	border: 0;
 }
-.city-zone .zone-groups {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-.zone-groups .item {
-	display: inline-block;
-	width: 30%;
-	line-height: 1.5;
-	padding: 5px 0;
-	text-align: center;
+#primary-add-btn {
+	padding: 3px 22px;
+	border: 0;
 	color: #FFF;
-	margin: 3px 3px;
-	background-color: rgba(0, 0, 0, 0.6);
-	transition: all .5s;
+	margin-left: 5px;
+	background-color: cornflowerblue;
 	cursor: pointer;
 }
-.zone-groups .item:hover {
-	background-color: rgba(220, 91, 42, 1);
-
+.hotpoint-list {
+	height: 470px;
+	margin-top: 10px;
+	overflow-y: scroll;
 }
-/* mask layer for trend echart */
+.hotpoint-list .table {
+	font-size: 13px;
+}
+.hotpoint-list .table thead{
+	color: #fff;
+	background-color: #999;
+}
+.table thead tr, .table tbody {
+	text-align: center;
+}
+.hotpoint-list .btn {
+	padding: 0 5px;
+	font-size: 13px;
+}
+/* 
+ * mask layer for trend echart 
+ */
 #mask-layer {
 	position: absolute;
 	top: 0;
@@ -212,7 +274,7 @@ body {
 #mask-layer .inner-box .select-groups {
 	position: absolute;
 	right: 15px;
-	width: 115px;
+	width: 167px;
 	border-radius: 3px;
 	background-color: cornflowerblue;
 }
@@ -228,7 +290,8 @@ body {
 	height: 410px;
 	overflow: hidden;
 }
-#trend_chart_box #trend_time, #trend_chart_box #trend_date {
+#trend_chart_box #trend_time, #trend_chart_box #trend_date,
+#trend_chart_box #trend_week {
 	height: 390px;
 	margin-top: 45px;
 	overflow: hidden;
@@ -236,9 +299,10 @@ body {
 #mask-layer .select-groups #ByHours {
 	border-radius: 4px 0 0 4px;
 }
-#mask-layer .select-groups #ByDay {
+
+#mask-layer .select-groups #ByWeek {
 	border-radius: 0 4px 4px 0;
-} 
+}
 #mask-layer .inner-box .actived {
 	background-color: #2f70e6;
 }
@@ -282,8 +346,8 @@ body {
 }
 .pointAnimate .addrName {
   position: absolute;
-  right: -40px;
-  top: 0px;
+  right: -27px;
+  top: -5px;
   display: inline-block;
   padding: 3px 4px;
   font-size: 12px;
